Fix cramped header links

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -118,7 +118,6 @@ a {
     position: absolute;
     right: 10px;
     top: -10px;
-    width: 310px;
 }
 
 #header a, #header .connected, #header .code {
